# BlackDuck-Python

./: BlackDuck-Main.py  MANIFEST.in  README.md  Test.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  test-pypi.yml  update-release.yml
blackduck/: __init__.py
blackduck_game.egg-info/: PKG-INFO  SOURCES.txt
main py/: __init__.py  game.py
